--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
 
       <!-- Formulario conectado a Formsubmit -->
       <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-4 text-left">
-        <!-- Configuración de Formsubmit -->
+        <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST">
         <input type="hidden" name="_next" value="gracias.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="Nuevo mensaje desde la web Vegas de Breña Alta">
