--- a/contacto.html
+++ b/contacto.html
@@ -50,8 +50,8 @@
 
       <!-- Formulario conectado a Formsubmit -->
       <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-4 text-left">
-        <!-- Configuración adicional -->
-        <input type="hidden" name="_next" value="gracias.html">
+        <!-- Redirección absoluta para que funcione -->
+        <input type="hidden" name="_next" value="https://elsuavesama.github.io/vegas-de-bre-a-alta/gracias.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="Nuevo mensaje desde la web Vegas de Breña Alta">
         <input type="hidden" name="_autoresponse" value="Gracias por escribirnos. Te responderemos en breve.">
@@ -79,3 +79,4 @@
   </footer>
 </body>
 </html>
+
