--- a/contacto.html
+++ b/contacto.html
@@ -23,9 +23,9 @@
 <body class="text-gray-100 min-h-screen flex flex-col">
   <!-- Navegación -->
   <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex space-x-4 text-gray-200" style="min-width: 360px; justify-content: center;">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center gap-2">
+      <h1 class="text-xl md:text-2xl font-bold text-green-200 text-center">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-2 text-sm md:text-base text-gray-200">
         <a href="index.html" class="hover:underline">Inicio</a>
         <a href="nosotros.html" class="hover:underline">Nosotros</a>
         <a href="productos.html" class="hover:underline">Productos</a>
@@ -36,21 +36,20 @@
   </header>
 
   <!-- Contenido -->
-  <main class="flex-grow flex items-center justify-center px-4 py-16">
-    <section class="relative z-10 max-w-2xl w-full bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-8 text-center">
-      <h2 class="text-4xl font-bold text-green-200 mb-6">Contáctanos</h2>
-      <p class="text-lg text-gray-300 mb-6">Puedes escribirnos, llamarnos o enviarnos un WhatsApp. Te responderemos lo antes posible.</p>
+  <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-14">
+    <section class="relative z-10 w-full max-w-[95%] md:max-w-2xl bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-8">
+      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6 text-center">Contáctanos</h2>
+      <p class="text-base sm:text-lg text-gray-300 mb-6 text-center">Puedes escribirnos, llamarnos o enviarnos un WhatsApp. Te responderemos lo antes posible.</p>
 
-      <div class="space-y-4 text-left text-lg text-gray-200 mb-8">
+      <div class="space-y-3 text-sm sm:text-base text-left text-gray-200 mb-8">
         <p><span class="text-green-400 font-semibold">📧 Email:</span> info@vegasbrena.com</p>
         <p><span class="text-green-400 font-semibold">📞 Teléfono:</span> +34 922 123 456</p>
         <p><span class="text-green-400 font-semibold">📍 Dirección:</span> Calle Real 12, Breña Alta, Santa Cruz de La Palma</p>
         <p><span class="text-green-400 font-semibold">💬 WhatsApp:</span> <a href="https://wa.me/34628478904" target="_blank" class="underline hover:text-green-300">+34 628 478 904</a></p>
       </div>
 
-      <!-- Formulario conectado a Formsubmit -->
-      <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-4 text-left">
-        <!-- Redirección absoluta para que funcione -->
+      <!-- Formulario -->
+      <form action="https://formsubmit.co/dhcanizares@gmail.com" method="POST" class="space-y-4">
         <input type="hidden" name="_next" value="https://elsuavesama.github.io/vegas-de-bre-a-alta/gracias.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="Nuevo mensaje desde la web Vegas de Breña Alta">
@@ -79,4 +78,5 @@
   </footer>
 </body>
 </html>
+
 
