--- a/galeria.html
+++ b/galeria.html
@@ -32,32 +32,32 @@
 
   <!-- Galería -->
   <section class="py-20 min-h-[calc(100vh-160px)]">
-    <div class="max-w-6xl mx-auto px-4 bg-black bg-opacity-40 backdrop-blur-sm rounded-xl p-6">
-      <h2 class="text-4xl font-bold text-green-200 text-center mb-12">Galería de Imágenes</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <div class="max-w-6xl mx-auto px-2 sm:px-4 bg-black bg-opacity-40 backdrop-blur-sm rounded-xl p-4 sm:p-6">
+      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 text-center mb-10 sm:mb-12">Galería de Imágenes</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
         <!-- Imagen 1 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria1.jpg" alt="Tabaco artesanal 1" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria1.jpg" alt="Tabaco artesanal 1" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 2 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria2.jpg" alt="Tabaco artesanal 2" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria2.jpg" alt="Tabaco artesanal 2" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 3 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria3.jpg" alt="Tabaco artesanal 3" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria3.jpg" alt="Tabaco artesanal 3" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 4 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria4.jpg" alt="Fábrica de tabaco" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria4.jpg" alt="Fábrica de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 5 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria5.jpg" alt="Producción de tabaco" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria5.jpg" alt="Producción de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
         <!-- Imagen 6 -->
-        <div class="overflow-hidden rounded-lg shadow-xl">
-          <img src="images/galeria6.jpg" alt="Hoja de tabaco" class="w-full h-64 object-cover transform transition-transform duration-300 hover:scale-105">
+        <div class="overflow-hidden rounded-lg shadow-xl aspect-[4/3]">
+          <img src="images/galeria6.jpg" alt="Hoja de tabaco" class="w-full h-full object-cover transition-transform duration-300 hover:scale-105">
         </div>
       </div>
     </div>
@@ -69,3 +69,4 @@
   </footer>
 </body>
 </html>
+
