--- a/nosotros.html
+++ b/nosotros.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nosotros - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    html, body { height: 100%; margin: 0; padding: 0; }
     body {
       background-image: url('images/fondo-nosotros.jpg');
       background-size: cover;
@@ -13,19 +14,15 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
     }
-    nav a {
-      display: inline-block;
-      min-width: 85px;
-      text-align: center;
-    }
+    nav a { display: inline-block; min-width: 85px; text-align: center; }
   </style>
 </head>
 <body class="text-gray-100 min-h-screen flex flex-col">
   <!-- Navegación -->
   <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex space-x-4 text-gray-200" style="min-width: 360px; justify-content: center;">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center">
+      <h1 class="text-xl md:text-2xl font-bold text-green-200 mb-2 md:mb-0 text-center">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center space-x-4 text-gray-200">
         <a href="index.html" class="hover:underline">Inicio</a>
         <a href="nosotros.html" class="text-green-300 font-semibold underline">Nosotros</a>
         <a href="productos.html" class="hover:underline">Productos</a>
@@ -35,21 +32,21 @@
     </div>
   </header>
 
-  <!-- Contenido -->
-  <main class="flex-grow flex items-center justify-center px-4 py-16">
-    <section class="relative z-10 max-w-4xl w-full bg-black bg-opacity-60 rounded-xl shadow-xl backdrop-blur p-8 text-center">
-      <h2 class="text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
-      <p class="text-lg text-gray-300 mb-4">
-        En Vegas de Breña Alta nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
-      </p>
-      <p class="text-lg text-gray-300">
-        Cada tabaco cuenta una historia de dedicación, conocimiento transmitido por generaciones y un amor profundo por lo auténtico. Nuestro compromiso es brindar experiencias que conecten con los sentidos y honren nuestras raíces.
+  <!-- Nuestra Historia -->
+  <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-16">
+    <section class="bg-black bg-opacity-60 backdrop-blur-sm rounded-xl shadow-xl max-w-3xl w-full p-6 sm:p-8 lg:p-12 text-center">
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-green-200 mb-4">Nuestra Historia</h2>
+      <p class="text-sm sm:text-base md:text-lg text-gray-300">
+        En el corazón de Breña Alta, en la isla de La Palma, nace nuestra pasión por el tabaco artesanal.
+        Cada hoja se cultiva con esmero y dedicación, honrando las tradiciones heredadas por generaciones.
+        Nuestro compromiso es ofrecer un producto auténtico, con carácter y sabor inigualable, en armonía
+        con el entorno natural que nos rodea.
       </p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-4 mt-auto">
+  <footer class="text-center py-4">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 </body>
