--- a/productos.html
+++ b/productos.html
@@ -31,7 +31,7 @@
   <header class="w-full bg-black bg-opacity-60 backdrop-blur-sm fixed top-0 left-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-green-800">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-end gap-2 text-gray-200 text-sm sm:text-base"
+      <nav class="flex flex-wrap justify-center gap-4 text-gray-200 text-sm sm:text-base w-full text-center"
         <a href="index.html" class="hover:underline">Inicio</a>
         <a href="nosotros.html" class="hover:underline">Nosotros</a>
         <a href="productos.html" class="text-green-700 font-semibold underline">Productos</a>
