--- a/nosotros.html
+++ b/nosotros.html
@@ -24,14 +24,20 @@
       background-color: rgba(0, 0, 0, 0.6);
       background-blend-mode: darken;
     }
+    @media (max-width: 640px) {
+      nav a {
+        display: block;
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body class="text-gray-100">
-  <!-- Navegación -->
   <header class="w-full bg-black bg-opacity-60 backdrop-blur-sm fixed top-0 left-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
       <h1 class="text-2xl font-bold text-green-800">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-x-6 gap-y-1 text-gray-200 text-sm sm:text-base w-full text-center transition-all duration-300 ease-in-out"
+      <nav class="flex flex-wrap justify-center gap-x-6 gap-y-1 text-gray-200 text-sm sm:text-base w-full text-center transition-all duration-300 ease-in-out">
         <a href="index.html" class="hover:underline">Inicio</a>
         <a href="nosotros.html" class="hover:underline">Nosotros</a>
         <a href="productos.html" class="text-green-700 font-semibold underline">Productos</a>
@@ -41,55 +47,36 @@
     </div>
   </header>
 
-  <!-- Espaciador para evitar solapamiento con header fijo -->
   <div class="h-24"></div>
 
-  <!-- Título -->
   <section class="text-center py-10 px-4">
     <h2 class="text-3xl sm:text-4xl font-bold text-green-200 drop-shadow-md">Nuestros Tabacos Artesanales</h2>
     <p class="text-base sm:text-lg text-gray-300 mt-2">Elige tu estilo y sabor favorito</p>
   </section>
 
-  <!-- Catálogo de productos -->
   <main class="relative z-10 max-w-6xl mx-auto px-4 pb-12 grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-    <!-- Productos insertados manualmente -->
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
       <img src="images/tabaco-clasico.jpg" alt="Tabaco Clásico" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Clásico</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Suave y cremoso, con notas de cedro, café y cuero.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,00 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
       <img src="images/tabaco-robusto.jpg" alt="Tabaco Robusto" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Robusto</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Mezcla fuerte y sabrosa. Fortaleza media.</p>
+      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Mezcla fuerte y sabrosa. Tabaco nicaragüense 100% orgánico. Fortaleza media.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,90 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
       <img src="images/tabaco-reserva.jpg" alt="Tabaco Reserva" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Reserva</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Edición especial añejada con sabores complejos.</p>
+      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Edición especial añejada con sabores complejos. Ceniza firme y tiro limpio.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">11,80 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -97,12 +84,7 @@
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Dorado</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Clásico cubano con cuerpo medio. Aroma persistente y sabor envolvente.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">9,90 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -110,12 +92,7 @@
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Intenso</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Forma puntiaguda para un encendido más preciso. Sabor complejo y elegante.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">10,20 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -123,12 +100,7 @@
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Maduro</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Formato delgado que resalta sabores y aromas. Fumada prolongada.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">9,30 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -136,12 +108,7 @@
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Premium Reserva</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Tamaño clásico y balanceado. Ideal para cualquier momento del día.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,60 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -149,16 +116,10 @@
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Suave</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Edición limitada con mezcla única. Para conocedores exigentes.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">12,00 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.5 7h13l-1.5-7M7 13h10m-4 7a1 1 0 11-2 0" />
-        </svg>
-        Añadir al carrito
-      </button>
+      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
     </div>
   </main>
 
-  <!-- Footer -->
   <footer class="text-center py-4 mt-12">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
