--- a/nosotros.html
+++ b/nosotros.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nosotros - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -13,9 +13,10 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
     }
+
     nav a {
       display: inline-block;
-      min-width: 85px;
+      min-width: 75px;
       text-align: center;
     }
   </style>
@@ -23,26 +24,26 @@
 <body class="text-gray-100 min-h-screen flex flex-col">
   <!-- Navegación -->
   <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex space-x-4 text-gray-200" style="min-width: 360px; justify-content: center;">
-        <a href="index.html" class="hover:underline">Inicio</a>
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
+      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
+        <a href="index.html" class="hover:text-green-300">Inicio</a>
         <a href="nosotros.html" class="text-green-300 font-semibold underline">Nosotros</a>
-        <a href="productos.html" class="hover:underline">Productos</a>
-        <a href="galeria.html" class="hover:underline">Galería</a>
-        <a href="contacto.html" class="hover:underline">Contacto</a>
+        <a href="productos.html" class="hover:text-green-300">Productos</a>
+        <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
   </header>
 
   <!-- Contenido -->
-  <main class="flex-grow flex items-center justify-center px-4 py-16">
-    <section class="relative z-10 max-w-4xl w-full bg-black bg-opacity-60 rounded-xl shadow-xl backdrop-blur p-8 text-center">
-      <h2 class="text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
-      <p class="text-lg text-gray-300 mb-4">
-        En Vegas de Breña Alta nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
+  <main class="flex-grow flex items-center justify-center px-4 py-12 sm:py-16">
+    <section class="relative z-10 max-w-3xl w-full bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-10 text-center">
+      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
+      <p class="text-base sm:text-lg text-gray-300 mb-4 leading-relaxed text-justify">
+        En <strong>Vegas de Breña Alta</strong> nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
       </p>
-      <p class="text-lg text-gray-300">
+      <p class="text-base sm:text-lg text-gray-300 leading-relaxed text-justify">
         Cada tabaco cuenta una historia de dedicación, conocimiento transmitido por generaciones y un amor profundo por lo auténtico. Nuestro compromiso es brindar experiencias que conecten con los sentidos y honren nuestras raíces.
       </p>
     </section>
