--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,6 @@
       background-attachment: fixed;
       background-repeat: no-repeat;
     }
-
     nav a {
       display: inline-block;
       min-width: 75px;
@@ -37,22 +36,21 @@
   </header>
 
   <!-- Contenido -->
-  <main class="flex-grow flex items-center justify-center px-4 py-12 sm:py-16">
-    <section class="relative z-10 max-w-3xl w-full bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-10 text-center">
-      <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
-      <p class="text-base sm:text-lg text-gray-300 mb-4 leading-relaxed text-justify">
+  <main class="flex-grow flex items-center justify-center px-2 sm:px-4 py-10 sm:py-16">
+    <section class="relative z-10 max-w-3xl w-full bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-4 sm:p-10 text-center">
+      <h2 class="text-2xl sm:text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
+      <p class="text-sm sm:text-lg text-gray-300 mb-4 leading-relaxed text-justify">
         En <strong>Vegas de Breña Alta</strong> nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
       </p>
-      <p class="text-base sm:text-lg text-gray-300 leading-relaxed text-justify">
+      <p class="text-sm sm:text-lg text-gray-300 leading-relaxed text-justify">
         Cada tabaco cuenta una historia de dedicación, conocimiento transmitido por generaciones y un amor profundo por lo auténtico. Nuestro compromiso es brindar experiencias que conecten con los sentidos y honren nuestras raíces.
       </p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-4 mt-auto">
+  <footer class="text-center py-6 mt-auto">
     <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
-
