--- a/galeria.html
+++ b/galeria.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galería - Vegas de Breña Alta</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
-      background-image: url('images/fondo-galeria.jpg');
+      background-image: url('images/hero-vegas.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
       background-repeat: no-repeat;
+      background-color: black;
     }
   </style>
 </head>
-<body class="text-gray-100">
-  <!-- Navegación -->
-  <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center">
-      <h1 class="text-xl md:text-2xl font-bold text-green-200 mb-2 md:mb-0 text-center">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center space-x-4 text-gray-200">
-        <a href="index.html" class="hover:underline">Inicio</a>
-        <a href="nosotros.html" class="hover:underline">Nosotros</a>
-        <a href="productos.html" class="hover:underline">Productos</a>
-        <a href="galeria.html" class="text-green-300 font-semibold underline">Galería</a>
-        <a href="contacto.html" class="hover:underline">Contacto</a>
+<body class="text-gray-100 min-h-screen flex flex-col">
+
+  <!-- Header de navegación -->
+  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
+      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
+        <a href="index.html" class="text-green-300 font-semibold">Inicio</a>
+        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
+        <a href="productos.html" class="hover:text-green-300">Productos</a>
+        <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
   </header>
