--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     }
 
     body {
-      background-image: url('images/hero-vegas.jpg');
+      background-image: url('images/fondo-contacto.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
