--- a/productos.html
+++ b/productos.html
@@ -3,35 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegas de Breña Alta</title>
+  <title>Productos - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html {
-      scroll-behavior: smooth;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-
+    html, body {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
     body {
       background-image: url('images/fondo-productos.jpg');
       background-size: cover;
-      background-position: center;
+      background-position: center center;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-color: black;
+      background-color: rgba(0, 0, 0, 0.6);
+      background-blend-mode: darken;
     }
+    
   </style>
 </head>
-<body class="text-gray-100 min-h-screen flex flex-col">
-
-  <!-- Header de navegación -->
-  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
+<body class="text-gray-100">
+  <header class="w-full bg-black bg-opacity-60 backdrop-blur-sm fixed top-0 left-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
-        <a href="index.html" class="text-green-300 font-semibold">Inicio</a>
-        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
+      <h1 class="text-2xl font-bold text-green-800">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-x-6 gap-y-1 text-gray-200 text-sm sm:text-base w-full text-center transition-all duration-300 ease-in-out">
+        <a href="index.html" class="hover:underline">Inicio</a>
+        <a href="nosotros.html" class="hover:underline">Nosotros</a>
         <a href="productos.html" class="text-green-700 font-semibold underline">Productos</a>
-        <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
+        <a href="galeria.html" class="hover:underline">Galería</a>
+        <a href="contacto.html" class="hover:underline">Contacto</a>
       </nav>
     </div>
   </header>
@@ -46,18 +51,17 @@
   <main class="relative z-10 max-w-6xl mx-auto px-4 pb-12 grid sm:grid-cols-2 md:grid-cols-3 gap-6">
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
       <img src="images/tabaco-clasico.jpg" alt="Tabaco Clásico" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
-      <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Clásico</h3>
-      <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Suave y cremoso, con notas de cedro, café y cuero.</p>
-      <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,00 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
-    </div>
+      <h3 class="text-lg sm:text-xl md:text-2xl font-bold mb-2 text-green-100 text-center transition-all duration-300 ease-in-out hover:text-green-300">Tabaco Clásico</h3>
+      <p class="text-sm sm:text-base md:text-lg text-gray-200 text-center leading-relaxed transition-all duration-300 ease-in-out">Suave y cremoso, con notas de cedro, café y cuero.</p>
+      <p class="text-base sm:text-lg font-semibold text-green-400 mb-4 transition-all duration-300 ease-in-out">8,00 €</p>
+          </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
       <img src="images/tabaco-robusto.jpg" alt="Tabaco Robusto" class="rounded mb-4 shadow aspect-[4/3] object-cover w-full" />
       <h3 class="text-base sm:text-lg md:text-xl font-semibold mb-2 text-green-100 text-center">Tabaco Robusto</h3>
       <p class="mb-2 text-center text-sm sm:text-base text-gray-200">Mezcla fuerte y sabrosa. Tabaco nicaragüense 100% orgánico. Fortaleza media.</p>
       <p class="text-sm sm:text-base md:text-lg font-bold text-green-400 mb-4">8,90 €</p>
-      <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition-all duration-200">Añadir al carrito</button>
+      
     </div>
 
     <div class="bg-black/50 backdrop-blur-sm rounded-xl shadow-xl p-6 flex flex-col items-center border border-white/10 hover:scale-105 transition-transform duration-300 ease-in-out">
@@ -114,6 +118,5 @@
   </footer>
 </body>
 </html>
-
 
 
